--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,13 +45,13 @@
                 </li>
                 <li>
                     <a href="">
-                        <span class="icon"><i class="fas fa-lock-alt"></i></span>
+                        <span class="icon"><i class="fas fa-key"></i></span>
                         <span class="title">Password</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <span class="icon"><i class="fas fa-lock-alt"></i></span>
+                        <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
                         <span class="title">Sing Out</span>
                     </a>
                 </li>
